# Vtuber-AI

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  STT.py  TTS.py  __init__.py  api_llm.py  brain.py  eval.py  finetune.py  general_utils.py  requirements.txt  run.py  train.py  tts_client.py  tts_exp.py  tts_utils.py  utils.py
.github/: FUNDING.yml
Coqui_TTS/: Dockerfile  (+3 more)
TTS_Wizard/Coqui_TTS/: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  pyproject.toml
TTS_Wizard/Coqui_TTS/.github/: PR_TEMPLATE.md
TTS_Wizard/Coqui_TTS/.github/ISSUE_TEMPLATE/: config.yml
TTS_Wizard/Coqui_TTS/.github/actions/setup-uv/: action.yml
TTS_Wizard/Coqui_TTS/.github/workflows/: docker.yaml  style_check.yml  tests.yml
TTS_Wizard/Coqui_TTS/TTS/: .models.json  api.py  model.py
TTS_Wizard/Coqui_TTS/TTS/config/: __init__.py
TTS_Wizard/Coqui_TTS/TTS/demos/xtts_ft_demo/: README.md  XTTS_finetune_colab.ipynb
TTS_Wizard/Coqui_TTS/TTS/encoder/: dataset.py
TTS_Wizard/Coqui_TTS/TTS/encoder/configs/: base_encoder_config.py
TTS_Wizard/Coqui_TTS/TTS/encoder/models/: base_encoder.py  resnet.py
TTS_Wizard/Coqui_TTS/TTS/encoder/utils/: generic_utils.py  visual.py
TTS_Wizard/Coqui_TTS/TTS/server/: server.py
TTS_Wizard/Coqui_TTS/TTS/server/templates/: index.html
TTS_Wizard/Coqui_TTS/TTS/tts/configs/: align_tts_config.py  bark_config.py  delightful_tts_config.py  fast_speech_config.py  fastspeech2_config.py  glow_tts_config.py  neuralhmm_tts_config.py  overflow_config.py  shared_configs.py  vits_config.py  xtts_config.py
TTS_Wizard/Coqui_TTS/TTS/tts/datasets/: __init__.py
TTS_Wizard/Coqui_TTS/TTS/tts/layers/: losses.py
TTS_Wizard/Coqui_TTS/TTS/tts/layers/bark/: model.py  model_fine.py
TTS_Wizard/Coqui_TTS/TTS/tts/layers/bark/hubert/: hubert_manager.py  tokenizer.py
TTS_Wizard/Coqui_TTS/TTS/tts/layers/delightful_tts/: encoders.py  networks.py  pitch_adaptor.py
TTS_Wizard/Coqui_TTS/TTS/tts/layers/feed_forward/: encoder.py
TTS_Wizard/Coqui_TTS/TTS/tts/layers/glow_tts/: transformer.py
TTS_Wizard/Coqui_TTS/TTS/tts/layers/overflow/: common_layers.py  neural_hmm.py
TTS_Wizard/Coqui_TTS/TTS/tts/layers/tacotron/: capacitron_layers.py
TTS_Wizard/Coqui_TTS/TTS/tts/layers/tortoise/: arch_utils.py  audio_utils.py  autoregressive.py  clvp.py  dpm_solver.py  utils.py  vocoder.py
TTS_Wizard/Coqui_TTS/TTS/tts/layers/vits/: discriminator.py  transforms.py
TTS_Wizard/Coqui_TTS/TTS/tts/layers/xtts/: gpt.py  hifigan_decoder.py  tokenizer.py  zh_num2words.py
TTS_Wizard/Coqui_TTS/TTS/tts/layers/xtts/trainer/: dataset.py
TTS_Wizard/Coqui_TTS/TTS/tts/models/: __init__.py  align_tts.py  base_tacotron.py  base_tts.py  forward_tts.py  glow_tts.py  overflow.py
TTS_Wizard/Coqui_TTS/TTS/tts/utils/: data.py  fairseq.py  speakers.py  ssim.py  synthesis.py
TTS_Wizard/Coqui_TTS/TTS/tts/utils/text/: cleaners.py
TTS_Wizard/Coqui_TTS/TTS/tts/utils/text/chinese_mandarin/: numbers.py
TTS_Wizard/Coqui_TTS/TTS/tts/utils/text/french/: abbreviations.py
TTS_Wizard/Coqui_TTS/TTS/tts/utils/text/korean/: ko_dictionary.py  korean.py  phonemizer.py
TTS_Wizard/Coqui_TTS/TTS/tts/utils/text/phonemizers/: __init__.py  base.py  espeak_wrapper.py  gruut_wrapper.py  multi_phonemizer.py
TTS_Wizard/Coqui_TTS/TTS/utils/: download.py  synthesizer.py  vad.py
TTS_Wizard/Coqui_TTS/TTS/utils/audio/: processor.py  torch_transforms.py
TTS_Wizard/Coqui_TTS/TTS/vc/configs/: freevc_config.py  openvoice_config.py  shared_configs.py
TTS_Wizard/Coqui_TTS/TTS/vc/layers/freevc/: mel_processing.py
TTS_Wizard/Coqui_TTS/TTS/vc/models/: base_vc.py  freevc.py  knnvc.py  openvoice.py
TTS_Wizard/Coqui_TTS/TTS/vocoder/configs/: hifigan_config.py
TTS_Wizard/Coqui_TTS/TTS/vocoder/datasets/: gan_dataset.py  wavegrad_dataset.py  wavernn_dataset.py
TTS_Wizard/Coqui_TTS/TTS/vocoder/layers/: wavegrad.py
TTS_Wizard/Coqui_TTS/TTS/vocoder/models/: __init__.py  fullband_melgan_generator.py  gan.py  melgan_generator.py  multiband_melgan_generator.py  parallel_wavegan_discriminator.py  parallel_wavegan_generator.py  wavegrad.py
TTS_Wizard/Coqui_TTS/TTS/vocoder/utils/: generic_utils.py
TTS_Wizard/Coqui_TTS/docs/source/: conf.py  faq.md  inference.md  server.md  tutorial_for_nervous_beginners.md
TTS_Wizard/Coqui_TTS/docs/source/datasets/: tts_datasets.md
TTS_Wizard/Coqui_TTS/docs/source/extension/: index.md
TTS_Wizard/Coqui_TTS/docs/source/main_classes/: trainer_api.md
TTS_Wizard/Coqui_TTS/docs/source/models/: bark.md  forward_tts.md  tacotron1-2.md  tortoise.md  xtts.md
TTS_Wizard/Coqui_TTS/docs/source/training/: index.md
TTS_Wizard/Coqui_TTS/notebooks/: Tutorial_1_use-pretrained-TTS.ipynb  plot_embeddings_umap.ipynb
TTS_Wizard/Coqui_TTS/notebooks/dataset_analysis/: analyze.py
TTS_Wizard/Coqui_TTS/recipes/bel-alex73/: README.md
TTS_Wizard/Coqui_TTS/recipes/ljspeech/fast_pitch/: train_fast_pitch.py
TTS_Wizard/Coqui_TTS/recipes/ljspeech/fast_speech/: train_fast_speech.py
TTS_Wizard/Coqui_TTS/recipes/ljspeech/fastspeech2/: train_fastspeech2.py
TTS_Wizard/Coqui_TTS/recipes/thorsten_DE/tacotron2-DDC/: train_tacotron_ddc.py
TTS_Wizard/Coqui_TTS/scripts/: sync_readme.py
TTS_Wizard/Coqui_TTS/tests/: __init__.py
TTS_Wizard/Coqui_TTS/tests/aux_tests/: test_compute_statistics.py  test_extract_tts_spectrograms.py  test_find_unique_phonemes.py  test_numpy_transforms.py  test_torch_transforms.py
TTS_Wizard/Coqui_TTS/tests/data/ljspeech/: metadata_mp3.csv  metadata_wav.csv
TTS_Wizard/Coqui_TTS/tests/integration/: __init__.py  test_speaker_encoder_train.py  test_train_vocoder.py  test_vits_multilingual_train-d_vectors.py  test_xtts_gpt_train.py
TTS_Wizard/Coqui_TTS/tests/text_tests/: test_japanese_phonemizer.py  test_phonemizer.py  test_text_cleaners.py
TTS_Wizard/Coqui_TTS/tests/tts_tests/: test_tacotron_layers.py  test_tacotron_model.py
TTS_Wizard/Coqui_TTS/tests/vc_tests/: test_freevc.py  test_openvoice.py
TTS_Wizard/Coqui_TTS/tests/vocoder_tests/: test_vocoder_gan_datasets.py  test_vocoder_losses.py
TTS_Wizard/Coqui_TTS/tests/zoo_tests/: test_big_models.py  test_models.py
(+313 files in other folders)
